# parcelsim

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
notebooks/: demo_boston.ipynb  demo_boston_segments.ipynb  demo_cities.ipynb  demo_lyon.ipynb  demo_nyc_2025.ipynb  demo_synthetic.ipynb  validation_lyon.ipynb  validation_nyc.ipynb
parcelsim/: __init__.py  city.py
parcelsim/demand/: base.py  france_model.py  generic_model.py  osm_segment_model.py  usps_model.py
parcelsim/demand/builtin/: country_params.yaml
parcelsim/emissions/: factors.py
parcelsim/operators/: assignment.py  operator.py
parcelsim/operators/builtin/: boston_2024.yaml  lyon_2024.yaml  us_2021.yaml
parcelsim/output/: kpi.py
parcelsim/population/: base.py
parcelsim/population/adapters/: census_fr.py  census_us.py  worldpop.py
parcelsim/routing/ca/: model.py
parcelsim/routing/vrp/: model.py  result.py
parcelsim/scenario/: base.py  modifiers.py
tests/: test_basic.py
