[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parcelsim"
version = "0.1.2"
description = "City-agnostic synthetic last-mile parcel delivery demand generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rodrigo H", email = "rodrigoh@mit.edu" }]
keywords = ["urban logistics", "parcel delivery", "synthetic demand", "last-mile", "freight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "networkx>=3.0",
    "osmnx>=1.9",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/rhermosilla-codes/parcelsim"
Repository = "https://github.com/rhermosilla-codes/parcelsim"
Issues = "https://github.com/rhermosilla-codes/parcelsim/issues"

[project.optional-dependencies]
us = []
worldpop = ["rasterio>=1.3", "rasterstats>=0.19"]
vrp = ["ortools>=9.8"]
viz = ["matplotlib>=3.7", "contextily>=1.4", "folium>=0.15", "branca>=0.7"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.6",
    "ruff>=0.1",
    "pre-commit>=3.5",
]

[project.scripts]
parcelsim = "parcelsim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["parcelsim*"]

[tool.setuptools.package-data]
"parcelsim.operators.builtin" = ["*.yaml"]
"parcelsim.operators.builtin.depots" = ["*.geojson"]
"parcelsim.demand.builtin" = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
